--- a/style.css
+++ b/style.css
@@ -191,9 +191,14 @@ pre {
 .hola13 h3 {
     font-style: italic;
     padding-left: 13px;
+    padding-top: 11px;
+    padding-bottom: 0%;
     margin-top: 25px;
     margin-bottom: 0%;
-    color: black;
+    color: rgb(51, 200, 183);
+    font-weight: lighter;
+    text-align: justify;
+    
 
 
 }
@@ -203,3 +208,14 @@ pre {
     margin-top: 0%;
 
 }
+.hola13{
+
+    background-image: url(anime4.jfif.png);
+    background-size: 1800px;
+   background-position:top;
+   background-repeat: no-repeat;
+    height: 90px;
+    width: 100%;
+}
+
+    
