--- a/style.css
+++ b/style.css
@@ -221,3 +221,47 @@ pre {
 
 /* new codes */
 
+.formhtml0 {
+    padding-left: 495px;
+    padding-right: 495px;
+    margin-top: 10px;
+}
+
+.formhtml {
+
+    color: rgb(0, 0, 0);
+    background-color: rgb(51, 200, 183);
+    width: 500px;
+    border: 4px 0px 4px 0px;
+    border-color: black;
+    border-style: inset;
+    padding: 0%;
+    margin: 0%;
+
+
+}
+
+.formhtml2 {
+    text-align: center;
+    font-size: 20px;
+    font-family: sans-serif;
+}
+
+.formhtml3 {
+    text-align: center;
+    font-size: 20px;
+    font-family: sans-serif;
+}
+
+.formhtml4 {
+    text-align: center;
+    font-size: 20px;
+    font-family: sans-serif;
+}
+
+.formhtml5 {
+    text-align: center;
+    font-size: 20px;
+    font-family: sans-serif;
+
+}
